# ackermann-controller

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  check_cppcheck.sh  check_cpplint.sh  readme.md  runme.sh  testme.sh
BashScripts/: buildme.sh  check_cppcheck.sh  check_cpplint.sh  runme.sh  testme.sh
app/: AckermannVehicle.cpp  CMakeLists.txt  Controller.cpp  Limits.cpp  Model.cpp  PID.cpp  PIDController.cpp  Vehicle.cpp  controller.cpp  demo.cpp  main.cpp
app/demo/: window.cpp  window.h
app/fake/: plant.cpp
docs/doxygen/html/: _controller_8hpp.html  _controller_8hpp__dep__incl.map  _controller_8hpp__dep__incl.md5  _controller_8hpp_source.html  _limits_8cpp.html  _limits_8cpp__incl.map  _limits_8cpp__incl.md5  _limits_8hpp.html  _limits_8hpp__dep__incl.map  _limits_8hpp__dep__incl.md5  _limits_8hpp__incl.map  _limits_8hpp__incl.md5  _limits_8hpp_source.html  (+108 more)
docs/uml/: activity_diagram.txt  class_diagram.txt  controller.txt
doxygen/html/: _controller_8hpp.html  _controller_8hpp__dep__incl.map  _controller_8hpp__dep__incl.md5  _controller_8hpp__incl.map  _controller_8hpp__incl.md5  _controller_8hpp_source.html  _limits_8cpp.html  _limits_8hpp.html  _limits_8hpp__dep__incl.map  _limits_8hpp__dep__incl.md5  _limits_8hpp__incl.map  _limits_8hpp_source.html  _model_8hpp.html  _model_8hpp__dep__incl.map  _model_8hpp__dep__incl.md5  _model_8hpp__incl.map  _model_8hpp__incl.md5  _model_8hpp_source.html  _p_i_d_8hpp.html  _p_i_d_8hpp__dep__incl.map  _p_i_d_8hpp__dep__incl.md5  _p_i_d_8hpp__incl.md5  _p_i_d_8hpp_source.html  _params_8hpp.html  _params_8hpp__dep__incl.map  _params_8hpp__dep__incl.md5  _params_8hpp__incl.map  _params_8hpp_source.html  annotated.html  class_window.html  class_window__coll__graph.md5  class_window__inherit__graph.md5  classackermann_1_1_controller-members.html  classackermann_1_1_controller.html  classackermann_1_1_controller_a285777e5abee8b5ec7eb683410215a04_icgraph.map  classackermann_1_1_controller_a285777e5abee8b5ec7eb683410215a04_icgraph.md5  classackermann_1_1_limits.html  classackermann_1_1_limits_a0e75c61fc7d5d90c6f64af78d8cf76ff_icgraph.map  classackermann_1_1_limits_a0e75c61fc7d5d90c6f64af78d8cf76ff_icgraph.md5  classackermann_1_1_limits_a1fcf66ef8f8161d38e3d77c1e5acfb92_cgraph.md5  (+49 more)
doxygen/latex/: _controller_8hpp.tex  _controller_8hpp__dep__incl.md5  _limits_8hpp.tex  _limits_8hpp__dep__incl.md5  _limits_8hpp__incl.md5  _model_8hpp.tex  _model_8hpp__dep__incl.md5  _model_8hpp__incl.md5  _p_i_d_8hpp.tex  _p_i_d_8hpp__dep__incl.md5  _p_i_d_8hpp__incl.md5  _params_8hpp.tex  _params_8hpp__dep__incl.md5  annotated.tex  class_window.tex  class_window__coll__graph.md5  class_window__inherit__graph.md5  classackermann_1_1_limits.tex  classackermann_1_1_limits_a0e75c61fc7d5d90c6f64af78d8cf76ff_icgraph.md5  classackermann_1_1_limits_a1fcf66ef8f8161d38e3d77c1e5acfb92_cgraph.md5  classackermann_1_1_limits_abb347d9d57d22dfe47ef704ea6d10d7d_icgraph.md5  classackermann_1_1_model.tex  classackermann_1_1_p_i_d.tex  classfake_1_1_plant.tex  dir_d422163b96683743ed3963d4aac17747.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  index.tex  namespaceackermann.tex  namespacefake.tex  plant_8h.tex  plant_8h__dep__incl.md5  refman.tex  structackermann_1_1_p_i_d_params.tex  structackermann_1_1_params.tex  structfake_1_1_plant_options.tex  window_8cpp.tex  window_8h.tex  window_8h__dep__incl.md5  (+1 more)
include/: AckermannVehicle.hpp  Controller.hpp  Demo.hpp  Limits.hpp  Model.hpp  PID.hpp  PIDController.hpp  Params.hpp  State.hpp  Vehicle.hpp  controller.hpp
include/fake/: plant.h
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  main.cpp  system.cpp
test/fake/: plant.cpp  plant.h
test/unit/: AckermannVehicle.cpp  Controller.cpp  Limits.cpp  Model.cpp  PID.cpp  State.cpp  Vehicle.cpp
(+153 files in other folders)
